# OpenTraceView

./: CI_MIGRATION_SUMMARY.md  Doxyfile  MIGRATION_PROGRESS.md  README  README.md  ci.save  config.h.in  extdef.h  main.cpp  meson.build  meson_options.txt  opentraceview.qrc  opentraceviewico.rc  signalhandler.cpp  signalhandler.hpp
.amazonq/cli-todo-lists/: 1761303288467.json  1761317529876.json  1761333252719.json
.github/workflows/: build.yml  ci.yml  notify-stack.yml  release.yml
android/: assetreader.cpp  assetreader.hpp  bundled_libs.xml.in  loghandler.cpp  loghandler.hpp
contrib/: opentraceview_cross.nsi.in  org.opentrace.OpenTraceView.appdata.xml  org.opentrace.OpenTraceView.desktop  org.sigrok.OpenTraceView.appdata.xml  org.sigrok.OpenTraceView.desktop  pulseview_cross.nsi.in
manual/: CMakeLists.txt  acquisition.txt  analysis.txt  cli.txt  decoders.txt  import_export.txt  installation.txt  manual.txt  meson.build  overview.txt
otv/: application.cpp  application.hpp  devicemanager.cpp  devicemanager.hpp  globalsettings.cpp  globalsettings.hpp  logging.cpp  logging.hpp  mainwindow.cpp  mainwindow.hpp  metadata_obj.cpp  metadata_obj.hpp  session.cpp  session.hpp  storesession.cpp  storesession.hpp  strnatcmp.hpp  util.cpp  util.hpp
otv/binding/: binding.cpp  binding.hpp  decoder.cpp  decoder.hpp  device.cpp  device.hpp  inputoutput.cpp  inputoutput.hpp
otv/data/: analog.cpp  analog.hpp  analogsegment.cpp  analogsegment.hpp  decodesignal.cpp  decodesignal.hpp  logic.cpp  logic.hpp  logicsegment.cpp  logicsegment.hpp  mathsignal.cpp  mathsignal.hpp  segment.cpp  segment.hpp  signalbase.cpp  signalbase.hpp  signaldata.cpp  signaldata.hpp
otv/data/decode/: annotation.cpp  annotation.hpp  decoder.cpp  decoder.hpp  row.cpp  row.hpp  rowdata.cpp  rowdata.hpp
otv/devices/: device.cpp  device.hpp  file.cpp  file.hpp  hardwaredevice.cpp  hardwaredevice.hpp  inputfile.cpp  inputfile.hpp  sessionfile.cpp  sessionfile.hpp
otv/dialogs/: connect.cpp  connect.hpp  inputoutputoptions.cpp  inputoutputoptions.hpp  settings.cpp  settings.hpp  storeprogress.cpp  storeprogress.hpp
otv/popups/: channels.cpp  channels.hpp  deviceoptions.cpp  deviceoptions.hpp
otv/prop/: bool.cpp  bool.hpp  double.cpp  double.hpp  enum.cpp  enum.hpp  int.cpp  int.hpp  property.cpp  property.hpp  string.cpp  string.hpp
otv/subwindows/: subwindowbase.cpp  subwindowbase.hpp
otv/subwindows/decoder_selector/: item.cpp  model.cpp  subwindow.cpp  subwindow.hpp
otv/toolbars/: mainbar.cpp  mainbar.hpp
otv/views/: viewbase.cpp  viewbase.hpp
otv/views/decoder_binary/: QHexView.cpp  QHexView.hpp  view.cpp  view.hpp
otv/views/tabular_decoder/: model.cpp  view.cpp  view.hpp
otv/views/trace/: analogsignal.cpp  analogsignal.hpp  cursor.cpp  cursor.hpp  cursorpair.cpp  cursorpair.hpp  decodetrace.cpp  decodetrace.hpp  flag.cpp  flag.hpp  header.cpp  header.hpp  logicsignal.cpp  logicsignal.hpp  marginwidget.cpp  marginwidget.hpp  mathsignal.cpp  mathsignal.hpp  ruler.cpp  ruler.hpp  signal.cpp  signal.hpp  standardbar.cpp  standardbar.hpp  timeitem.cpp  timeitem.hpp  timemarker.cpp  timemarker.hpp  trace.cpp  trace.hpp  tracegroup.cpp  tracegroup.hpp  tracepalette.cpp  tracepalette.hpp  tracetreeitem.cpp  tracetreeitem.hpp  tracetreeitemowner.cpp  tracetreeitemowner.hpp  triggermarker.cpp  triggermarker.hpp  (+13 more)
otv/widgets/: colorbutton.cpp  colorbutton.hpp  colorpopup.cpp  colorpopup.hpp  decodergroupbox.cpp  decodergroupbox.hpp  decodermenu.cpp  decodermenu.hpp  devicetoolbutton.cpp  devicetoolbutton.hpp  exportmenu.cpp  exportmenu.hpp  flowlayout.hpp  importmenu.cpp  importmenu.hpp  popup.cpp  popup.hpp  popuptoolbutton.cpp  popuptoolbutton.hpp  sweeptimingwidget.cpp  sweeptimingwidget.hpp  timestampspinbox.cpp  timestampspinbox.hpp  wellarray.cpp  wellarray.hpp
subprojects/: opentracedecode.wrap
test/: CMakeLists.txt  meson.build  test.cpp  test.hpp  util.cpp
test/data/: analogsegment.cpp  decoderstack.cpp  logicsegment.cpp  segment.cpp
test/view/: ruler.cpp
