test_sources = files(
  'test.cpp',
  'util.cpp',
  'data/analogsegment.cpp',
  'data/logic.cpp',
  'data/logicsegment.cpp',
  'view/ruler.cpp'
)

# Include main application sources for testing
test_app_sources = files(
  '../otv/application.cpp',
  '../otv/devicemanager.cpp',
  '../otv/globalsettings.cpp',
  '../otv/logging.cpp',
  '../otv/mainwindow.cpp',
  '../otv/metadata_obj.cpp',
  '../otv/session.cpp',
  '../otv/storesession.cpp',
  '../otv/util.cpp',
  '../otv/binding/binding.cpp',
  '../otv/binding/device.cpp',
  '../otv/binding/inputoutput.cpp',
  '../otv/data/analog.cpp',
  '../otv/data/analogsegment.cpp',
  '../otv/data/logic.cpp',
  '../otv/data/logicsegment.cpp',
  '../otv/data/mathsignal.cpp',
  '../otv/data/segment.cpp',
  '../otv/data/signalbase.cpp',
  '../otv/data/signaldata.cpp',
  '../otv/devices/device.cpp',
  '../otv/devices/file.cpp',
  '../otv/devices/hardwaredevice.cpp',
  '../otv/devices/inputfile.cpp',
  '../otv/devices/sessionfile.cpp',
  '../otv/dialogs/connect.cpp',
  '../otv/dialogs/inputoutputoptions.cpp',
  '../otv/dialogs/settings.cpp',
  '../otv/dialogs/storeprogress.cpp',
  '../otv/popups/channels.cpp',
  '../otv/popups/deviceoptions.cpp',
  '../otv/prop/bool.cpp',
  '../otv/prop/double.cpp',
  '../otv/prop/enum.cpp',
  '../otv/prop/int.cpp',
  '../otv/prop/property.cpp',
  '../otv/prop/string.cpp',
  '../otv/subwindows/subwindowbase.cpp',
  '../otv/toolbars/mainbar.cpp',
  '../otv/views/trace/analogsignal.cpp',
  '../otv/views/trace/cursor.cpp',
  '../otv/views/trace/cursorpair.cpp',
  '../otv/views/trace/flag.cpp',
  '../otv/views/trace/header.cpp',
  '../otv/views/trace/logicsignal.cpp',
  '../otv/views/trace/mathsignal.cpp',
  '../otv/views/trace/marginwidget.cpp',
  '../otv/views/trace/ruler.cpp',
  '../otv/views/trace/signal.cpp',
  '../otv/views/trace/timeitem.cpp',
  '../otv/views/trace/timemarker.cpp',
  '../otv/views/trace/trace.cpp',
  '../otv/views/trace/tracegroup.cpp',
  '../otv/views/trace/tracepalette.cpp',
  '../otv/views/trace/tracetreeitem.cpp',
  '../otv/views/trace/tracetreeitemowner.cpp',
  '../otv/views/trace/triggermarker.cpp',
  '../otv/views/trace/view.cpp',
  '../otv/views/trace/viewitem.cpp',
  '../otv/views/trace/viewitemowner.cpp',
  '../otv/views/trace/viewitempaintparams.cpp',
  '../otv/views/trace/viewport.cpp',
  '../otv/views/trace/viewwidget.cpp',
  '../otv/views/viewbase.cpp',
  '../otv/views/trace/standardbar.cpp',
  '../otv/widgets/colorbutton.cpp',
  '../otv/widgets/colorpopup.cpp',
  '../otv/widgets/devicetoolbutton.cpp',
  '../otv/widgets/exportmenu.cpp',
  '../otv/widgets/flowlayout.cpp',
  '../otv/widgets/importmenu.cpp',
  '../otv/widgets/popup.cpp',
  '../otv/widgets/popuptoolbutton.cpp',
  '../otv/widgets/sweeptimingwidget.cpp',
  '../otv/widgets/timestampspinbox.cpp',
  '../otv/widgets/wellarray.cpp'
)

test_headers = files(
  'test.hpp',
  '../otv/globalsettings.hpp',
  '../otv/logging.hpp',
  '../otv/mainwindow.hpp',
  '../otv/metadata_obj.hpp',
  '../otv/session.hpp',
  '../otv/storesession.hpp',
  '../otv/binding/device.hpp',
  '../otv/data/analog.hpp',
  '../otv/data/analogsegment.hpp',
  '../otv/data/logic.hpp',
  '../otv/data/logicsegment.hpp',
  '../otv/data/mathsignal.hpp',
  '../otv/data/signalbase.hpp',
  '../otv/dialogs/connect.hpp',
  '../otv/dialogs/inputoutputoptions.hpp',
  '../otv/dialogs/settings.hpp',
  '../otv/dialogs/storeprogress.hpp',
  '../otv/popups/channels.hpp',
  '../otv/popups/deviceoptions.hpp',
  '../otv/prop/bool.hpp',
  '../otv/prop/double.hpp',
  '../otv/prop/enum.hpp',
  '../otv/prop/int.hpp',
  '../otv/prop/property.hpp',
  '../otv/prop/string.hpp',
  '../otv/subwindows/subwindowbase.hpp',
  '../otv/toolbars/mainbar.hpp',
  '../otv/views/trace/analogsignal.hpp',
  '../otv/views/trace/cursor.hpp',
  '../otv/views/trace/flag.hpp',
  '../otv/views/trace/header.hpp',
  '../otv/views/trace/logicsignal.hpp',
  '../otv/views/trace/mathsignal.hpp',
  '../otv/views/trace/marginwidget.hpp',
  '../otv/views/trace/ruler.hpp',
  '../otv/views/trace/signal.hpp',
  '../otv/views/trace/timeitem.hpp',
  '../otv/views/trace/timemarker.hpp',
  '../otv/views/trace/trace.hpp',
  '../otv/views/trace/tracegroup.hpp',
  '../otv/views/trace/tracetreeitem.hpp',
  '../otv/views/trace/triggermarker.hpp',
  '../otv/views/trace/view.hpp',
  '../otv/views/trace/viewitem.hpp',
  '../otv/views/trace/viewport.hpp',
  '../otv/views/trace/viewwidget.hpp',
  '../otv/views/viewbase.hpp',
  '../otv/views/trace/standardbar.hpp',
  '../otv/widgets/colorbutton.hpp',
  '../otv/widgets/colorpopup.hpp',
  '../otv/widgets/devicetoolbutton.hpp',
  '../otv/widgets/exportmenu.hpp',
  '../otv/widgets/flowlayout.hpp',
  '../otv/widgets/importmenu.hpp',
  '../otv/widgets/popup.hpp',
  '../otv/widgets/popuptoolbutton.hpp',
  '../otv/widgets/sweeptimingwidget.hpp',
  '../otv/widgets/timestampspinbox.hpp',
  '../otv/widgets/wellarray.hpp'
)

# Process Qt files for tests
test_processed = qt6.preprocess(moc_headers: test_headers)

# Build test executable
test_exe = executable('opentraceview-test',
  sources: test_sources + test_app_sources + test_processed,
  dependencies: deps,
  cpp_args: compile_args + ['-DBOOST_TEST_DYN_LINK'],
  include_directories: include_directories('..', '../..'),
  build_by_default: false
)

# Register test
test('opentraceview-test', test_exe)
